tests/snapshots/renderer/table_without_body.snap
---
source: tests/support/snapshot.rs
description: "| abc | def |\n| --- | --- |\n"
---
<table>
<thead>
<tr>
<th>abc</th>
<th>def</th>
</tr>
</thead>
</table>
